--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
 
@@ -14,10 +13,56 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
-    <div id="chart"></div>
-    <svg></svg>
-    <div id="tooltip" class="hidden">
-      <span></span>
+    <div id="game">
+      <div id="instructions">
+        <p>
+          Den Qvortrup, som kommer først ud af fængslet, har vundet spillet.
+        </p>
+        <p>
+          Vælg antal spillere:
+        </p>
+        <form id="playerForm">
+          <div class="wrapper">
+            <input type="radio" name="players" id="oneplayer" value="1">
+            <label for="oneplayer">1 spiller</label>
+          </div>
+          <div class="wrapper">
+            <input type="radio" name="players" id="twoplayer" value="2" checked="checked">
+            <label for="oneplayer">2 spillere</label>
+          </div>
+          <div class="wrapper">
+            <input type="radio" name="players" id="threeplayer" value="3">
+            <label for="oneplayer">3 spillere</label>
+          </div>
+          <div class="wrapper">
+            <input type="radio" name="players" id="fourplayer" value="4">
+            <label for="oneplayer">4 spillere</label>
+          </div>
+        </form>
+        <p>
+          <a href="#" id="buttonStart">Start spillet!</a>
+        </p>
+      </div>
+      <div id="controls">
+        <p class="playerName"></p>
+        <p>
+          <span id="diceValue">0</span>
+        </p>
+        <p>
+          <a href="#" id="throwDice">Kast terningen!</a>
+        </p>
+      </div>
+      <div id="player1">P1</div>
+      <div id="player2">P2</div>
+      <div id="player3">P3</div>
+      <div id="player4">P4</div>
+      <div id="message">
+        <p class="message"></p>
+        <p>
+          <a href="" id="dismiss">Dismiss</a>
+        </p>
+      </div>
+      <div id="done">Done</div>
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="./js/qvortrup.js"></script>
