Updated player icon markup

--- a/html/index.html
+++ b/html/index.html
@@ -52,10 +52,10 @@
           <a href="#" id="throwDice">Kast terningen!</a>
         </p>
       </div>
-      <div id="player1">1</div>
-      <div id="player2">2</div>
-      <div id="player3">3</div>
-      <div id="player4">4</div>
+      <div id="player1"><p>1</p></div>
+      <div id="player2"><p>2</p></div>
+      <div id="player3"><p>3</p></div>
+      <div id="player4"><p>4</p></div>
       <div id="message">
         <p class="message"></p>
         <p class="done">
