Added reload button to final message

--- a/html/index.html
+++ b/html/index.html
@@ -58,14 +58,13 @@
       <div id="player4"><p>4</p></div>
       <div id="message">
         <p class="message"></p>
-        <p class="done">
-          Tak for spillet!
+        <p class="reload">
+          <a href="#" id="reload">Start forfra »</a>
         </p>
         <p class="dismiss">
           <a href="#" id="dismiss">Fortsæt »</a>
         </p>
       </div>
-      <div id="done">Done</div>
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="./js/qvortrup.js"></script>
